fix z-index of autocomplete, move ingredients to Ingredients class, render template

--- a/www/css/new-recipe-page.scss
+++ b/www/css/new-recipe-page.scss
@@ -207,6 +207,8 @@ input[type="text"] {
 
 
 
+
+
 /*
 
       checkboxes
@@ -329,6 +331,18 @@ input[type="text"] {
 
 .step-input{
   margin-bottom:50px !important;
+}
+
+.delete-step{
+  margin-left:20px;
+  
+}
+.card{
+  z-index:1001 !important;
+}
+
+.list-group-item-action{
+  z-index:1001 !important;
 }
 
 
